<resources>
    <string name="hello">Welcome to Cyclosleep</string>
    <string name="app_name">Cyclosleep</string>
    <string name="textCysUrl">http://gradlspace.com/cys/</string>
    <string name="textCysSupport">support@gradlspace.com</string>
    <string name="textCopyright">Copyright 2011-2012 gradlspace.com.\nAll rights reserved.</string>
    <string name="textLicences">Nothing.</string>
    <string name="textNotifyActive">Cyclosleep active</string>
    <string name="check_license">Check license</string>
    <string name="checking_license">Checking license...</string>
    <string name="license_ok">License OK.</string>
    <string name="application_error">Application error: %1$s</string>
    <string name="unlicensed_dialog_title">Application license expired</string>
    <string name="unlicensed_dialog_body">The license information cached from Android Market has expired. The License Checker could not retrieve a valid license response.\nThere might be a problem with your connection to the Android Market.\nPlease make sure your Internet connection is active/working and press \"Retry\".\nFor further information visit http://gradlspace.com/cys/faq</string>
    <string name="textNull"></string>
    <string name="textBuy">Buy app</string>
    <string name="textExit">Exit</string>
    <string name="textYes">Yes</string>
    <string name="textNo">No</string>
    <string name="textRetry">Retry</string>
    <string name="textCancel">Cancel</string>
    <string name="textNotSet">Not set</string>
    <string name="textMonitor">Monitor</string>
    <string name="textOptions">Options</string>
    <string name="textCalibrate">Calibrate</string>
    <string name="textAnalyzer">Analyzer</string>
    <string name="textViewer">Viewer</string>
    <string name="textAlarmDismiss">Dismiss</string>
    <string name="textGo">Go!</string>
    <string name="textSave">Save</string>
    <string name="textAbout">About</string>
    <string name="textAccept">Accept</string>
    <string name="textReject">Don\'t accept</string>
    <string name="textDelete">Delete</string>
    <string name="textView">View</string>
    <string name="textViewHypno">View Hypnogram</string>
    <string name="textViewDream">View Dream</string>
    <string name="textHelp">Help</string>
    <string name="textEmail">Email</string>
    <string name="textEmailHypno">Email Hypnogram</string>
    <string name="textEmailDream">Email Dream</string>
    <string name="textShare">Share</string>
    <string name="textStats">Statistics</string>
    <string name="textSendXDF">Send as OpenXDF</string>
    <string name="textSendEDF">Send as EDF</string>
    <string name="textMainDisabled">Disable All Alarms</string>
    <string name="textLastHypno">Last Hypnogram</string>
    <string name="textStageTwilight">Int Sleep</string>
    <string name="textStageRem">REM</string>
    <string name="textStageDawn">Near-wake</string>
    <string name="textStageAwake">Awake</string>
    <string name="textEula">End User License Agreement</string>
    <string name="textEulaText">By clicking the \"Accept\" button, you agree that you have read, understood and accept all the terms and conditions in the License Agreement, found
 at\nhttp://gradlspace.com/cys/eula\n\nIn particular, you accept and agree that the authors of
 this software can, under no circumstances whatsoever, be held accountable in any way for damage caused to your device running this program. Although very unlikely,
 it can not be ruled out that you damage your device unintentionally while sleeping. Recommendations to reduce that risk are given during the introduction on the next screen and
 on the web at\nhttp://gradlspace.com/cys/safety\n\nSince this program is part of an ongoing research project at the <i>University of Erlangen-Nuremberg</i> and the <i>University Hospital Erlangen</i>, it might be possible that
 you get asked about voluntarily participating in academic studies/surveys by submitting nonpersonal information. Further details will be supplied in those particular cases. Rest assured
 that no data directly processed by our program-packages will ever be submitted, gathered or retrieved without you opting in on a case-by-case basis.\nIf you do not ever wish to participate or
 support the related scientific research, you can deactivate the entire module in the options-screen.</string>
    <string name="textTutorial">Tutorial</string>
    <string name="prefAlarmAdv">Alarm Advanced</string>
    <string name="prefAlarms">Alarms</string>
    <string name="prefAlarmAdvDesc">Advanced settings for alarms, events and responses.</string>
    <string name="prefAaTimeout">Alarm Timeout</string>
    <string name="prefAaTimeoutDesc">The timeout for all alarm sounds/effects.</string>
    <string name="prefAaVibe">Disable Vibrator</string>
    <string name="prefAaVibeDesc">Don\'t vibrate the handheld.</string>
    <string name="prefAaSound">Disable Sound</string>
    <string name="prefAaSoundDesc">Don\'t use any sound effects.</string>
    <string name="prefAaNoSilent">Ignore Silent Mode</string>
    <string name="prefAaNoSilentDesc">If activated, the alarm sounds are played even if the phone is in silent mode.</string>
    <string name="prefAaRiot">Riot</string>
    <string name="prefAaRiotDesc">Play a more annoying sound in the last quarter of the timeout if the alarm isn\'t committed.</string>
    <string name="prefAaCommit">Commit Approval</string>
    <string name="prefAaCommitDlg">Commit Approval Action</string>
    <string name="prefAaCommitDesc">Additional action that has to be performed before the alarm is committed.</string>
    <string name="prefDream">Dreams</string>
    <string name="prefDreamDesc">Configure options to help remember your dreams.</string>
    <string name="prefDreamAsk">Ask on alarms</string>
    <string name="prefDreamAskDesc">Ask about dreams after alarm dialog was dismissed.</string>
    <string name="prefDreamAsync">Shift alarms</string>
    <string name="prefDreamAsyncDesc">Tries to wake you in REM phases. CAUTION: use carefully, this will disturb your sleep!</string>
    <string name="prefAlarmSetup">Alarm Setup</string>
    <string name="prefSleepRating">Sleep Rating</string>
    <string name="prefSleepRatingDesc">Enables you to rate your sleep after dismissing the alarm.</string>
    <string name="prefHints">Show hints</string>
    <string name="prefHintsDesc">Show usage hints and tips.</string>
    <string name="prefNoDup">Don\'t duplicate alarm</string>
    <string name="prefNoDupDesc">Activate this to prevent alarms from going off twice. (1. sleep stage induced &amp; 2. on the set time)</string>
    <string name="prefCustom">Custom Mechanics</string>
    <string name="prefCustomDesc">Fine-tune the detection/alarm mechanics. (Expert!)</string>
    <string name="prefCustomStage">Set custom threshold value.</string>
    <string name="prefSPThreshold">Movement threshold</string>
    <string name="prefSPThresholdDesc">Threshold value for movement recognition [12-500 int]</string>
    <string name="prefNoAutoAdapt">Disable Auto Adaption</string>
    <string name="prefNoAutoAdaptDesc">Deactivates the automatic adjustment of threshold values. Enables manual override.</string>
    <string name="prefStreamTimeout">Stream Timeout</string>
    <string name="prefStreamTimeoutDesc">Retry timeout for reaching a stream server for audio playback [seconds].</string>
    <string name="prefSpeech">Speech Synthesis</string>
    <string name="prefSpeechDesc">Use Android\'s Text-To-Speech engine for announcements.</string>
    <string name="prefSpeechEnable">Use TTS</string>
    <string name="prefSpeechEnableDesc">Initialize TTS Engine and check data availability.</string>
    <string name="prefSpeechAtime">Announce Time</string>
    <string name="prefSpeechAtimeDesc">Regularly tells you what time it is during an alarm.</string>
    <string name="prefSpeechMessage">Announce Message</string>
    <string name="prefSpeechMessageDesc">Regularly reads you the message you set for the alarm.</string>
    <string name="prefSpeechInterval">Announce Interval</string>
    <string name="prefSpeechIntervalDesc">At what interval the announces should be made during an alarm [in minutes].</string>
    <string name="prefApMode">Airplane Mode</string>
    <string name="prefApModeDesc">Activate Airplane Mode during SleepMode, disabling all radios in the device.</string>
    <string name="prefOnSleepNow">SleepNow Action</string>
    <string name="prefOnSleepNowDesc">Action to perform when activating SleepMode.</string>
    <string name="prefAoMode">Disable Auto-Orientation</string>
    <string name="prefAoModeDesc">Deactivates automatic screen orientation changes while monitoring. (Recommended)</string>
    <string name="prefSleepMode">During SleepMode/Monitoring</string>
    <string name="prefUseCripple">Sensor-Bug-Workaround</string>
    <string name="prefUseCrippleDesc">Select a work-around for the famous sensor-tracking bug. (see FAQ!)</string>
    <string name="prefData">Data Storage</string>
    <string name="prefDataDesc">Save/Organize/Send data files.</string>
    <string name="prefEnableData">Enable Data Storage</string>
    <string name="prefEnableDataDesc">Write all collected data to disk. If this is deactivated you can only view live reports.</string>
    <string name="prefAutoCleanup">Automatic cleanup</string>
    <string name="prefAutoCleanupDesc">Automatically prune data storage, deleting old or empty data files.</string>
    <string name="prefNoSensorData">Exclude Raw Data</string>
    <string name="prefNoSensorDataDesc">Don\'t save raw sensor data. (Recommended)</string>
    <string name="prefDataPath">Data Storage Path</string>
    <string name="prefDataPathDesc">Enter a directory if you don\'t want to use the default (sdcard).</string>
    <string name="prefExpire">Expiration time</string>
    <string name="prefExpireDesc">Expiration time, in days, for data files.</string>
    <string name="prefNoScience">Deactivate Science</string>
    <string name="prefNoScienceDesc">If this is enabled you will never be asked about supporting academic research.</string>
    <string name="prefDataZip">Compress Raw Data</string>
    <string name="prefDataZipDesc">Compress raw data files. Before sending them and local files after 7 days.</string>
    <string name="prefDataIncHypno">Auto-purge Hypnograms</string>
    <string name="prefDataIncHypnoDesc">Include hypnogram files when auto-purging data files.</string>
    <string name="prefDataIncDream">Auto-purge Dreams</string>
    <string name="prefDataIncDreamDesc">Include dream files when auto-purging data files.</string>
    <string name="prefGlobal">Global</string>
    <string name="prefTimer">Show QuickTimer</string>
    <string name="prefTimerDesc">Shows a QuickTimer on the main screen for simple timing. (Requires restart)</string>
    <string name="prefIcon">Use Notifications</string>
    <string name="prefIconDesc">Keep a persistent icon in the notification area while triggers are active.</string>
    <string name="prefSimple">Simple Mode</string>
    <string name="prefSimpleDesc">Deactivates most tracking mechanics making this a simple - only time based - alarm clock.</string>
    <string name="prefCalibrate">Calibration Activity</string>
    <string name="prefCalibrateDesc">Use this Activity to find a good spot for your handheld on the bed.</string>
    <string name="prefPrefireTime">Alarm Pre-Fire Window</string>
    <string name="prefPrefireTimeDesc">Time window in which alarms are allowed to pre-fire [in minutes]</string>
    <string name="prefReset">Reset Preferences</string>
    <string name="prefResetDesc">Reset all custom preferences to their factory-default values.</string>
    <string name="prefReport">Send Error Reports</string>
    <string name="prefReportDesc">Show option to send crash/error reports via mail.</string>
    <string name="textSupport">Contact Support</string>
</resources>