<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/lblCyclo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_static"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/color_text_important"/>

    <TextView
        android:id="@+id/lblVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/textCopyright"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/lblCysUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:paddingBottom="20dp"
        android:text="@string/textCysUrl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnEula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_default"
        android:onClick="onClickEula"
        android:text="@string/textEula" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_default"
            android:onClick="onClickContact"
            android:text="@string/textSupport" android:minHeight="50dp"/>

        <Button
            android:id="@+id/btnTutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_default"
            android:onClick="onClickTutorial"
            android:text="@string/textTutorial" android:layout_marginLeft="35dp"/>

    </LinearLayout>

</LinearLayout>